# pyblank

./: .env.template  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/todo/: main.py
src/todo/lib/: config.py  foo.py
tests/: test_foo.py  test_version.py
